coreapitest/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapitest
  labels:
    app: coreapitest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreapitest
  template:
    metadata:
      labels:
        app: coreapitest
    spec:
      containers:
      - name: coreapitest
        image: "docker-registry.default.svc:5000/govil/coreapitest:0.1"
        ports:
        - containerPort: 8080
