coreapitest/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: coreapitest
  lables:
    app: coreapitest
spec:
  selector:
    app: coreapitest
  ports:
  - name: http
    port: 80
    targetPort: 8080
